--- a/package.json
+++ b/package.json
@@ -20,7 +20,5 @@
     "url": "https://github.com/Jiaaa1014/npmfcc/issues"
   },
   "homepage": "https://github.com/Jiaaa1014/npmfcc#readme",
-  "dependencies": {
-    "@linclark/pkg": "^1.0.2"
-  }
+  "dependencies": {}
 }
