--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
-  "name": "@jia/npmfcc",
-  "version": "1.0.1",
+  "name": "npmfcc2",
+  "version": "1.0.0",
   "description": "none",
-  "main": "index.js",
+  "main": "program.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Jiaaa1014/npmfcc.git"
-  },
-  "keywords": [
-    "fcc",
-    "challenge"
-  ],
-  "author": "Jiaaa1014",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Jiaaa1014/npmfcc/issues"
-  },
-  "homepage": "https://github.com/Jiaaa1014/npmfcc#readme",
-  "dependencies": {}
+  "dependencies": {
+    "bl": "^1.2.1"
+  }
 }
