one more challenge

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bl": "^1.2.1"
+    "bl": "^1.2.1",
+    "through2-map": "^3.0.0"
   }
 }
