--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bl": "^1.2.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "mongodb": "^2.2.33",
     "pug": "^2.0.0-rc.4",
     "stylus": "^0.54.5",
     "through2-map": "^3.0.0"
